Downgraded to jdk8